--- a/src/app/carosello/carosello.component.html
+++ b/src/app/carosello/carosello.component.html
@@ -1,35 +1,29 @@
+<br><br>
 @if (products) {
 <p-carousel 
     [value]="products" 
-    [numVisible]="3" 
-    [numScroll]="3" 
-    [circular]="true" 
+    [numVisible]="4" 
+    [numScroll]="1" 
+    [circular]="true"
+    [showIndicators]=!isMobile()
     [responsiveOptions]="responsiveOptions" 
     autoplayInterval="3000">
         <ng-template let-product pTemplate="item">
-                <div class="border-1 surface-border border-round m-2 p-3">
+                <div class="border-1 surface-border border-round m-2 p-3 ">
                     <div class="mb-3">
-                        <div class="relative mx-auto">
+                        <div class="relative mx-auto h-16rem">
                             <img 
-                                src="https://primefaces.org/cdn/primeng/images/demo/product/{{ product.image }}" 
-                                [alt]="product.name" 
-                                class="w-full border-round" />
-                            <p-tag 
-                                [value]="product.inventoryStatus" 
-                                class="absolute" 
-                                [ngStyle]="{ 'left.px': 5, 'top.px': 5 }" />
+                                [src] ="product.img"
+                                [alt]="product.tile" 
+                                class="w-full border-round h-14rem w-13rem" />
                         </div>
                     </div>
                     <div class="mb-3 font-medium">
-                        {{ product.name }}
+                        {{ product.title }}
                     </div>
-                    <div class="flex justify-content-between align-items-center">
-                    <div class="mt-0 font-semibold text-xl">
-                        {{ '$' + product.price }}
-                    </div>
+                    <div class="flex justify-content-center align-items-center">
                         <span>
-                            <p-button icon="pi pi-heart" severity="secondary" [outlined]="true" />
-                            <p-button icon="pi pi-shopping-cart" styleClass="ml-2" />
+                            <p-button icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
                         </span>
                     </div>
                 </div>
