--- a/src/app/carosello/carosello.component.html
+++ b/src/app/carosello/carosello.component.html
@@ -1,7 +1,7 @@
 <br><br>
 @if (products) {
 <p-carousel 
-    [value]="products" 
+    [value]= "displayedProducts"
     [numVisible]="4" 
     [numScroll]="1" 
     [circular]="true"
