products page created

--- a/src/app/carosello/carosello.component.html
+++ b/src/app/carosello/carosello.component.html
@@ -11,7 +11,8 @@
                 <div class="border-1 surface-border border-round m-2 p-3 text-center">
                     <div class="mb-3">
                         <div class="relative mx-auto h-16rem">
-                            <a routerLink="prodotti" [queryParams]="{type: product.type}" class="text-500 hover:text-700 no-underline"><img 
+                            <a routerLink="pagina-prodotto" [queryParams]="{id: product.id}" class="text-500 hover:text-700 no-underline">
+                                <img 
                                 [src] ="product.img"
                                 [alt]="product.tile" 
                                 class="w-full border-round h-14rem w-13rem" />
@@ -24,7 +25,7 @@
                     </div>
                     <div class="flex justify-content-center align-items-center">
                         <span>
-                            <p-button icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
+                            <p-button routerLink="pagina-prodotto" [queryParams]="{id: product.id}" icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
                         </span>
                     </div>
                 </div>
