--- a/src/app/prodotti/prodotti.component.html
+++ b/src/app/prodotti/prodotti.component.html
@@ -5,7 +5,12 @@
                 <div class="col-12" *ngFor="let item of products; let first = first" class="col-12">
                     <div class="flex flex-column sm:flex-row sm:align-items-center p-4 gap-3" [ngClass]="{ 'border-top-1 surface-border': !first }">
                         <div class="md:w-10rem relative">
-                            <img class="block xl:block mx-auto border-round w-full" [src]="item.img" [alt]="item.title" />
+                            <a routerLink="../pagina-prodotto" [queryParams]="{id: item.id}">
+                                <img 
+                                class="block xl:block mx-auto border-round w-full" 
+                                [src]="item.img" 
+                                [alt]="item.title" />
+                            </a>
                         </div>
                         <div class="flex flex-column md:flex-row justify-content-between md:align-items-center flex-1 gap-4">
                             <div class="flex flex-row md:flex-column justify-content-between align-items-start gap-2">
@@ -13,17 +18,11 @@
                                     <span class="font-medium text-secondary text-sm">{{ item.type }}</span>
                                     <div class="text-lg font-medium text-900 mt-2">{{ item.title }}</div>
                                 </div>
-                                <!--<div class="surface-100 p-1" style="border-radius: 30px">
-                                    <div class="surface-0 flex align-items-center gap-2 justify-content-center py-1 px-2" style="border-radius: 30px; box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.04), 0px 1px 2px 0px rgba(0, 0, 0, 0.06)">
-                                        <span class="text-900 font-medium text-sm">{{ item.rating }}</span>
-                                        <i class="pi pi-star-fill text-yellow-500"></i>
-                                    </div>
-                                </div>-->
                             </div>
                             <div class="flex flex-column md:align-items-end gap-5">
                                 <div class="flex flex-row-reverse md:flex-row gap-2">
                                     <p-button icon="pi pi-heart" [outlined]="true" />
-                                    <p-button icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
+                                    <p-button routerLink="../pagina-prodotto" [queryParams]="{id: item.id}" icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
                                 </div>
                             </div>
                         </div>
