--- a/src/app/prodotti/prodotti.component.html
+++ b/src/app/prodotti/prodotti.component.html
@@ -1,9 +1,11 @@
 <div class="card">
     <p-dataView #dv [value]="products" [rows]="5" [paginator]="true">
         <ng-template pTemplate="list" let-products>
-            <div class="grid grid-nogutter">
+            <div class="grid grid-nogutter" routerLink="schede">
                 <div class="col-12" *ngFor="let item of products; let first = first" class="col-12">
-                    <div class="flex flex-column sm:flex-row sm:align-items-center p-4 gap-3" [ngClass]="{ 'border-top-1 surface-border': !first }">
+                    
+                    <div class="flex flex-column sm:flex-row sm:align-items-center p-4 gap-3" [ngClass]="{ 'border-top-1 surface-border': !first }"  >
+                    
                         <div class="md:w-10rem relative">
                             <img class="block xl:block mx-auto border-round w-full" [src]="item.img" [alt]="item.title" />
                         </div>
@@ -23,7 +25,7 @@
                             <div class="flex flex-column md:align-items-end gap-5">
                                 <div class="flex flex-row-reverse md:flex-row gap-2">
                                     <p-button icon="pi pi-heart" [outlined]="true" />
-                                    <p-button icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" />
+                                    <p-button icon="pi pi-question-circle" class="flex-auto md:flex-initial white-space-nowrap" label="More info" routerLink="../schede"[queryParams]="{id: item.id}" />
                                 </div>
                             </div>
                         </div>
